[MVP-1693] fix not showing destination target / add intercom card in react card example (#126)
* fix not showing destination target and add intercom card in react card example

* address feedbacks

* update fix for not showing destinations

* update dependency in intercomCard useEffect

* remove unused import

--- a/packages/notifi-react-example/src/App.css
+++ b/packages/notifi-react-example/src/App.css
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
 }
-
 nav {
   height: 100px;
   display: flex;
@@ -13,12 +12,10 @@ nav {
 }
 
 .container {
-  height: calc(100vh - 110px);
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-
 .button {
   margin: 16px 0px 0px;
   cursor: pointer;
